--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <script type="text/javascript" src="drawing.js"></script>
+    <script type="text/javascript" src="tictactoe.js"></script>
     <style type="text/css">
       canvas {
       display: block; 
@@ -11,7 +11,7 @@
       <!--div.canvas-div { display: block; margin-left: auto; margin-right: auto; }-->
     </style>
   </head>
-  <body onload="draw();">
+  <body onload="play();">
     <div class="canvas-div">
       <canvas id="cvs" width="800" height="800"></canvas>
     </div>
