Pretty much working. A few refactorings to do involving some hard-coded numbers in the code, and maybe splitting the one large file up, but it works and so is good to publish on a github page.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header>
       <h1> Tic Tac Toe </h1>
       <p> You cannot beat me. I will even let you go first. </p>
+      <p id="winner"> </p>
     </header>
     <section>
       <div class="canvas-div">
@@ -16,7 +17,7 @@
       </div>
     </section>
     <footer>
-      By Karl Parkinson. Code available at <a href="https://github.com/KarlParkinson/tictactoe">Github</a>.
+      By <a href="https://karlparkinson.github.io/">Karl Parkinson</a>. Code available at <a href="https://github.com/KarlParkinson/tictactoe">Github</a>.
     </footer>
   </body>
 </html>
